# juice-networks

./: README.md
juice-nets/: Cargo.toml
juice-nets/src/: alexnet.rs  lenet.rs  main.rs
